--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.76.0",
     "react": "^18.2.0",
+    "react-datepicker": "^8.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
