--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.76.0",
     "ethers": "^6.15.0",
+    "js-sha256": "^0.11.1",
     "react": "^18.2.0",
     "react-datepicker": "^8.8.0",
     "react-dom": "^18.2.0",
