--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kiznoboko.github.io/MedSupplyChain-Hackathone-usecase",
+  "homepage": "https://rocker-bell.github.io/MedicationLot-Prototype",
   "name": "trajectory-web-app",
   "private": true,
   "version": "0.0.0",
