Add Linter logic

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,3 +1,49 @@
+# name: Linters
+
+# on:
+#   push:
+#     branches: [main]
+#   pull_request:
+
+# jobs:
+#   eslint:
+#     name: ESLint
+#     runs-on: ubuntu-22.04
+#     steps:
+#       - uses: actions/checkout@v3
+#       - uses: actions/setup-node@v3
+#         with:
+#           node-version: '18.x'
+
+#       - name: Install dependencies
+#         run: npm ci
+
+#       - name: Check ESLint version
+#         run: npx eslint --version
+
+#       - name: Run ESLint
+#         run: npx eslint './src/**/*.{js,jsx}'
+
+#   stylelint:
+#     name: Stylelint
+#     runs-on: ubuntu-22.04
+#     steps:
+#       - uses: actions/checkout@v3
+#       - uses: actions/setup-node@v3
+#         with:
+#           node-version: '18.x'
+
+#       - name: Install dependencies
+#         run: npm ci --legacy-peer-deps
+
+#       - name: Check Stylelint version
+#         run: npx stylelint --version
+
+#       - name: Run Stylelint
+#         run: npx stylelint './src/**/*.{css,scss}'
+
+
+
 name: Linters
 
 on:
@@ -11,9 +57,12 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+
+      - name: Setup Node
+        uses: actions/setup-node@v3
         with:
-          node-version: '18.x'
+          node-version: 18
+          cache: npm
 
       - name: Install dependencies
         run: npm ci
@@ -22,16 +71,19 @@ jobs:
         run: npx eslint --version
 
       - name: Run ESLint
-        run: npx eslint './src/**/*.{js,jsx}'
+        run: npx eslint "src/**/*.{js,jsx}" --config eslint.config.js
 
   stylelint:
     name: Stylelint
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+
+      - name: Setup Node
+        uses: actions/setup-node@v3
         with:
-          node-version: '18.x'
+          node-version: 18
+          cache: npm
 
       - name: Install dependencies
         run: npm ci --legacy-peer-deps
@@ -40,4 +92,4 @@ jobs:
         run: npx stylelint --version
 
       - name: Run Stylelint
-        run: npx stylelint './src/**/*.{css,scss}'
+        run: npx stylelint "src/**/*.css" --config stylelint.config.cjs
