--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "build": "vite build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint:js": "eslint 'src/**/*.{js,jsx}' --config eslint.config.js",
+    "lint:css": "stylelint 'src/**/*.css' --config stylelint.config.cjs",
+    "lint": "npm run lint:js && npm run lint:css"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.76.0",
@@ -23,15 +26,27 @@
     "tslib": "^2.8.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.36.0",
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
+    "@babel/preset-react": "^7.28.5",
+    "@eslint/js": "^9.39.1",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^5.0.4",
-    "eslint": "^9.36.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^9.39.1",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "gh-pages": "^6.3.0",
     "globals": "^16.4.0",
+    "stylelint": "^14.16.1",
+    "stylelint-config-css-modules": "^4.5.1",
+    "stylelint-config-prettier": "^9.0.5",
+    "stylelint-config-standard": "^29.0.0",
+    "stylelint-order": "^5.0.0",
     "vite": "^5.2.10"
   }
 }
