--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "gh-pages -d dist",
     "preview": "vite preview",
     "lint:js": "eslint \"src/**/*.{js,jsx}\" --config eslint.config.js --max-warnings=0",
+
     "lint:css": "stylelint \"src/**/*.css\" --config stylelint.config.cjs --max-warnings=0",
     "lint": "npm run lint:js && npm run lint:css"
   },
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
+    "@babel/eslint-parser": "^7.28.5",
     "@babel/preset-env": "^7.28.5",
     "@babel/preset-react": "^7.28.5",
     "@eslint/js": "^9.39.1",
@@ -39,9 +41,9 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.22",
+    "eslint-plugin-react-refresh": "^0.4.24",
     "gh-pages": "^6.3.0",
-    "globals": "^16.4.0",
+    "globals": "^16.5.0",
     "stylelint": "^14.16.1",
     "stylelint-config-css-modules": "^4.5.1",
     "stylelint-config-prettier": "^9.0.5",
