run eslint js/jsx - Lint logic test - github action test

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -95,6 +95,37 @@
 #         run: npx stylelint "src/**/*.css" --config stylelint.config.cjs
 
 
+# name: Linters
+
+# on:
+#   push:
+#     branches: [main]
+#   pull_request:
+
+# jobs:
+#   eslint:
+#     runs-on: ubuntu-22.04
+#     steps:
+#       - uses: actions/checkout@v3
+#       - uses: actions/setup-node@v3
+#         with:
+#           node-version: 18
+#       - run: npm ci
+#       - name: Run ESLint
+#         run: npx eslint "src/**/*.{js,jsx}" --config eslint.config.js --max-warnings=0
+
+#   stylelint:
+#     runs-on: ubuntu-22.04
+#     steps:
+#       - uses: actions/checkout@v3
+#       - uses: actions/setup-node@v3
+#         with:
+#           node-version: 18
+#       - run: npm ci --legacy-peer-deps
+#       - name: Run Stylelint
+#         run: npx stylelint "src/**/*.css" --config stylelint.config.cjs --max-warnings=0
+
+
 name: Linters
 
 on:
@@ -104,23 +135,42 @@ on:
 
 jobs:
   eslint:
+    name: ESLint
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
+
       - uses: actions/setup-node@v3
         with:
-          node-version: 18
-      - run: npm ci
+          node-version: '18.x'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Check ESLint version
+        run: npx eslint --version
+
       - name: Run ESLint
-        run: npx eslint "src/**/*.{js,jsx}" --config eslint.config.js --max-warnings=0
+        run: npx eslint './src/**/*.{js,jsx}' --max-warnings=0
+        env:
+          # Ensures Node resolves ESM properly for your eslint.config.js
+          NODE_OPTIONS: "--experimental-specifier-resolution=node"
 
   stylelint:
+    name: Stylelint
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
+
       - uses: actions/setup-node@v3
         with:
-          node-version: 18
-      - run: npm ci --legacy-peer-deps
+          node-version: '18.x'
+
+      - name: Install dependencies
+        run: npm ci --legacy-peer-deps
+
+      - name: Check Stylelint version
+        run: npx stylelint --version
+
       - name: Run Stylelint
-        run: npx stylelint "src/**/*.css" --config stylelint.config.cjs --max-warnings=0
+        run: npx stylelint './src/**/*.{css,scss}'
