--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,135 +1,3 @@
-# name: Linters
-
-# on:
-#   push:
-#     branches: [main]
-#   pull_request:
-
-# jobs:
-#   eslint:
-#     name: ESLint
-#     runs-on: ubuntu-22.04
-#     steps:
-#       - uses: actions/checkout@v3
-#       - uses: actions/setup-node@v3
-#         with:
-#           node-version: '18.x'
-
-#       - name: Install dependencies
-#         run: npm ci
-
-#       - name: Check ESLint version
-#         run: npx eslint --version
-
-#       - name: Run ESLint
-#         run: npx eslint './src/**/*.{js,jsx}'
-
-#   stylelint:
-#     name: Stylelint
-#     runs-on: ubuntu-22.04
-#     steps:
-#       - uses: actions/checkout@v3
-#       - uses: actions/setup-node@v3
-#         with:
-#           node-version: '18.x'
-
-#       - name: Install dependencies
-#         run: npm ci --legacy-peer-deps
-
-#       - name: Check Stylelint version
-#         run: npx stylelint --version
-
-#       - name: Run Stylelint
-#         run: npx stylelint './src/**/*.{css,scss}'
-
-
-
-# name: Linters
-
-# on:
-#   push:
-#     branches: [main]
-#   pull_request:
-
-# jobs:
-#   eslint:
-#     name: ESLint
-#     runs-on: ubuntu-22.04
-#     steps:
-#       - uses: actions/checkout@v3
-
-#       - name: Setup Node
-#         uses: actions/setup-node@v3
-#         with:
-#           node-version: 18
-#           cache: npm
-
-#       - name: Install dependencies
-#         run: npm ci
-
-#       - name: Check ESLint version
-#         run: npx eslint --version
-
-#       - name: Run ESLint
-#         run: npx eslint "src/**/*.{js,jsx}" --config eslint.config.js
-
-#   stylelint:
-#     name: Stylelint
-#     runs-on: ubuntu-22.04
-#     steps:
-#       - uses: actions/checkout@v3
-
-#       - name: Setup Node
-#         uses: actions/setup-node@v3
-#         with:
-#           node-version: 18
-#           cache: npm
-
-#       - name: Install dependencies
-#         run: npm ci --legacy-peer-deps
-
-#       - name: Check Stylelint version
-#         run: npx stylelint --version
-
-#       - name: Run Stylelint
-#         run: npx stylelint "src/**/*.css" --config stylelint.config.cjs
-
-
-# name: Linters
-
-# on:
-#   push:
-#     branches: [main]
-#   pull_request:
-
-# jobs:
-#   eslint:
-#     runs-on: ubuntu-22.04
-#     steps:
-#       - uses: actions/checkout@v3
-#       - uses: actions/setup-node@v3
-#         with:
-#           node-version: 18
-#       - run: npm ci
-#       - name: Run ESLint
-#         run: npx eslint "src/**/*.{js,jsx}" --config eslint.config.js --max-warnings=0
-
-#   stylelint:
-#     runs-on: ubuntu-22.04
-#     steps:
-#       - uses: actions/checkout@v3
-#       - uses: actions/setup-node@v3
-#         with:
-#           node-version: 18
-#       - run: npm ci --legacy-peer-deps
-#       - name: Run Stylelint
-#         run: npx stylelint "src/**/*.css" --config stylelint.config.cjs --max-warnings=0
-
-
-
-
-
-
 name: Linters
 
 on:
@@ -154,11 +22,6 @@ jobs:
       - name: Check ESLint version
         run: npx eslint --version
 
-      - name: List JS/JSX files
-        run: |
-          echo "Files ESLint will check:"
-          find ./src -type f \( -name "*.js" -o -name "*.jsx" \)
-
       - name: Run ESLint
         run: npx eslint ./src --ext .js,.jsx --max-warnings=0 --config eslint.config.js
 
@@ -178,10 +41,5 @@ jobs:
       - name: Check Stylelint version
         run: npx stylelint --version
 
-      - name: List CSS/SCSS files
-        run: |
-          echo "Files Stylelint will check:"
-          find ./src -type f \( -name "*.css" -o -name "*.scss" \)
-
       - name: Run Stylelint
-        run: npx stylelint ./src --ext .css,.scss
+        run: npx stylelint './src/**/*.{css,scss}'
