--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -56,30 +56,24 @@ on:
 
 jobs:
   lint:
-    name: Run All Linters
+    name: Run ESLint and Stylelint
     runs-on: ubuntu-22.04
     steps:
-      - name: Checkout repo
+      - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18.x'
+          node-version: 18
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Check ESLint version
-        run: npx eslint --version
-
-      - name: Run ESLint (ESM)
+      - name: Run ESLint (ESM config)
         run: |
           node --experimental-specifier-resolution=node node_modules/eslint/lib/cli.js \
           ./src --ext .js,.jsx --max-warnings=0 --config eslint.config.js
-
-      - name: Check Stylelint version
-        run: npx stylelint --version
 
       - name: Run Stylelint
         run: npx stylelint './src/**/*.{css,scss}' --max-warnings=0
