--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -47,6 +47,39 @@
 #         run: npx stylelint './src/**/*.{css,scss}'
 
 
+# name: Linters
+
+# on:
+#   push:
+#     branches: [main]
+#   pull_request:
+
+# jobs:
+#   lint:
+#     name: Run ESLint and Stylelint
+#     runs-on: ubuntu-22.04
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v3
+
+#       - name: Setup Node.js
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: 18
+
+#       - name: Install dependencies
+#         run: npm ci
+
+#       - name: Run ESLint (ESM config)
+#         run: |
+#           node --experimental-specifier-resolution=node node_modules/eslint/lib/cli.js \
+#           ./src --ext .js,.jsx --max-warnings=0 --config eslint.config.js
+
+#       - name: Run Stylelint
+#         run: npx stylelint './src/**/*.{css,scss}' --max-warnings=0
+
+
+
 name: Linters
 
 on:
@@ -56,7 +89,7 @@ on:
 
 jobs:
   lint:
-    name: Run ESLint and Stylelint
+    name: Run Linters
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout code
@@ -70,10 +103,23 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run ESLint (ESM config)
+      - name: Run ESLint (ESM config, SARIF output)
         run: |
+          mkdir -p reports
           node --experimental-specifier-resolution=node node_modules/eslint/lib/cli.js \
-          ./src --ext .js,.jsx --max-warnings=0 --config eslint.config.js
+            ./src --ext .js,.jsx --max-warnings=0 --config eslint.config.js -f sarif -o reports/eslint.sarif
 
-      - name: Run Stylelint
-        run: npx stylelint './src/**/*.{css,scss}' --max-warnings=0
+      - name: Upload ESLint SARIF for GitHub annotations
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: reports/eslint.sarif
+
+      - name: Run Stylelint (SARIF output)
+        run: |
+          mkdir -p reports
+          npx stylelint './src/**/*.{css,scss}' --formatter sarif > reports/stylelint.sarif || true
+
+      - name: Upload Stylelint SARIF for GitHub annotations
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: reports/stylelint.sarif
