--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -80,6 +80,52 @@
 
 
 
+# name: Linters
+
+# on:
+#   push:
+#     branches: [main]
+#   pull_request:
+
+# jobs:
+#   lint:
+#     name: Run Linters
+#     runs-on: ubuntu-22.04
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v3
+
+#       - name: Setup Node.js
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: 18
+
+#       - name: Install dependencies
+#         run: npm ci
+
+#       - name: Run ESLint (ESM config, SARIF output)
+#         run: |
+#           mkdir -p reports
+#           node --experimental-specifier-resolution=node node_modules/eslint/lib/cli.js \
+#             ./src --ext .js,.jsx --max-warnings=0 --config eslint.config.js -f sarif -o reports/eslint.sarif
+
+#       - name: Upload ESLint SARIF for GitHub annotations
+#         uses: github/codeql-action/upload-sarif@v2
+#         with:
+#           sarif_file: reports/eslint.sarif
+
+#       - name: Run Stylelint (SARIF output)
+#         run: |
+#           mkdir -p reports
+#           npx stylelint './src/**/*.{css,scss}' --formatter sarif > reports/stylelint.sarif || true
+
+#       - name: Upload Stylelint SARIF for GitHub annotations
+#         uses: github/codeql-action/upload-sarif@v2
+#         with:
+#           sarif_file: reports/stylelint.sarif
+
+
+
 name: Linters
 
 on:
@@ -89,37 +135,35 @@ on:
 
 jobs:
   lint:
-    name: Run Linters
     runs-on: ubuntu-22.04
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: 18
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Run ESLint (ESM config, SARIF output)
+      - name: Run ESLint (ESM + SARIF)
         run: |
           mkdir -p reports
           node --experimental-specifier-resolution=node node_modules/eslint/lib/cli.js \
             ./src --ext .js,.jsx --max-warnings=0 --config eslint.config.js -f sarif -o reports/eslint.sarif
 
-      - name: Upload ESLint SARIF for GitHub annotations
+      - name: Upload ESLint SARIF
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: reports/eslint.sarif
 
-      - name: Run Stylelint (SARIF output)
+      - name: Run Stylelint (SARIF)
         run: |
           mkdir -p reports
           npx stylelint './src/**/*.{css,scss}' --formatter sarif > reports/stylelint.sarif || true
 
-      - name: Upload Stylelint SARIF for GitHub annotations
+      - name: Upload Stylelint SARIF
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: reports/stylelint.sarif
+
