--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -233,8 +233,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run ESLint
-        run: npx eslint ./src --ext .js,.jsx --max-warnings=0 --config eslint.config.js
+      - name: Run ESLint (ESM)
+        run: node --experimental-specifier-resolution=node ./node_modules/eslint/lib/cli.js ./src --ext .js,.jsx --max-warnings=0 --config eslint.config.js
+
 
       - name: Run Stylelint
         run: npx stylelint "./src/**/*.{css,scss}" --allow-empty-input
