--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "preview": "vite preview",
-    "lint:js": "eslint \"src/**/*.{js,jsx}\" --config eslint.config.js --max-warnings=0",
+   "lint:js": "eslint \"src/**/*.{js,jsx}\" --config eslint.config.js --max-warnings=0 --fix",
 
-    "lint:css": "stylelint \"src/**/*.css\" --config stylelint.config.cjs --max-warnings=0",
+    "lint:css": "stylelint \"src/**/*.css\" --config stylelint.config.cjs --max-warnings=0 --fix",
+
     "lint": "npm run lint:js && npm run lint:css"
   },
   "dependencies": {
